--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/jest": "^27.4.0"
+  },
   "devDependencies": {
     "jest": "^27.4.7"
   }
